# Hephaestus-Development

./: .gitmodules  compileGames.sh  installDependencies.sh
Archive/Engine/: CMakeLists.txt  main.cpp
Archive/Engine/API/: CMakeLists.txt  Hephaestus.cpp  Hephaestus.hpp
Archive/Engine/API/Window/: Window.cpp  Window.hpp
Archive/Hephaestus C++ - CLION/: CMakeLists.txt
Archive/Hephaestus C++ - CLION/API/: Hephaestus.cpp  Hephaestus.hpp
Archive/Hephaestus Engine/Hephaestus/: Hephaestus.cpp  Hephaestus.hpp  HephaestusPriv.hpp
Archive/Hephaestus Engine/Olympus/: main.cpp
Archive/Hephaestus Engine/Olympus.xcodeproj/: project.pbxproj
Archive/Hephaestus Engine/Olympus.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Archive/Hephaestus-C++/Hephaestus.xcodeproj/: project.pbxproj
Archive/Hephaestus-C++/Hephaestus/src/: main.cpp
Archive/Hephaestus-Swift/Hephaestus/: String Extensions.swift  main.swift  opengl_includes.h
Archive/Hephaestus-Swift/Hephaestus.xcodeproj/: project.pbxproj
Archive/Testing/: helloworld  helloworld.cpp
Games/GameOfLife/: CMakeLists.txt  main.cpp  mainLevelScene.cpp  mainLevelScene.hpp
Games/LowData/: CMakeLists.txt  LowDataGame.cpp  LowDataGame.hpp  main.cpp
Games/LowData/Characters/: AnimationFlipbook.cpp  AnimationFlipbook.hpp  MainCharacter.cpp  MainCharacter.hpp  Merchant.cpp  Merchant.hpp
Games/LowData/Environment/: EncounterSpace.cpp  EncounterSpace.hpp
Games/LowData/Items/: DroppedItem.cpp  DroppedItem.hpp  Item.cpp  Item.hpp
Games/LowData/Resources/: CollisionTests.ldataworld  hub_world.LDataWorld
Games/LowData/Scenes/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp
Games/PhysicsDemo/: CMakeLists.txt  main.cpp
LowData World Builder/: LowData-World-Builder--macOS--Info.plist
LowData World Builder/LowData World Builder.xcodeproj/: project.pbxproj
LowData World Builder/Shared/: ContentHandler.swift  ContentView.swift  LowData_World_BuilderApp.swift  Matrix.swift  RenderImageAsView.swift  WorldFile.swift
LowData World Builder/Shared/Assets.xcassets/Fence_Full.imageset/: Contents.json
LowData World Builder/Shared/Assets.xcassets/Fence_Left_Half.imageset/: Contents.json
LowData World Builder/Shared/Assets.xcassets/Fence_Post.imageset/: Contents.json
LowData World Builder/Shared/Assets.xcassets/Fence_Right_Half.imageset/: Contents.json
Olympus/: CMakeLists.txt  main.cpp
Olympus/Resources/: directory.json
compiled/GameOfLife/: CMakeCache.txt  GameOfLife  Makefile  cmake_install.cmake
compiled/GameOfLife/Hephaestus/: Makefile  cmake_install.cmake
compiled/Hephaestus/: CMakeCache.txt  Makefile  cmake_install.cmake
compiled/LowData/: CMakeCache.txt  LowData  Makefile  TestWorld.ldataworld  cmake_install.cmake
compiled/LowData/Hephaestus/: Makefile  cmake_install.cmake
compiled/Olympus/: CMakeCache.txt  Makefile  Olympus  cmake_install.cmake  directory.json
compiled/Olympus/Hephaestus/: Makefile  cmake_install.cmake
compiled/PhysicsDemo/: CMakeCache.txt  Makefile  PhysicsDemo  cmake_install.cmake
compiled/PhysicsDemo/Hephaestus/: Makefile  cmake_install.cmake
(+43 files in other folders)
